Implement v2 /warps endpoint with pagination.
